--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Rust
-      uses: actions/setup-rust@v1
-      with:
-        rust-version: stable
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        export PATH="$HOME/.cargo/bin:$PATH"
 
     - name: Generate Documentation
       run: |
