--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust Doc CI
+name: Rust CI/CD
 
 on:
   push:
@@ -6,24 +6,64 @@ on:
       - main
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Run Tests
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+        run: cargo test
+
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Install Rust
-      run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-        export PATH="$HOME/.cargo/bin:$PATH"
+      - name: Build Release
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+        run: cargo build --release
+        # Artifact path: target/release
 
-    - name: Generate Documentation
-      run: |
-        cargo doc --no-deps
+  rustdoc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Publish Documentation
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GH_TOKEN }}
-        publish_dir: ./target
+      - name: Generate Documentation
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+        run: cargo doc
+        # Artifact path: target/doc
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build, rustdoc]
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Create Public Directory
+        run: mkdir public
+
+      - name: Copy Documentation
+        run: mv target/doc public/doc
+
+      - name: Copy Binary
+        run: mv target/release/* public/
+        # Assuming the binary file has a predictable name
+
+      - name: Archive Public Directory
+        uses: actions/upload-artifact@v2
+        with:
+          name: public
+          path: public
+
