--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Copy Documentation
         run: mv target/doc public/doc
 
+      - name: Copy Binary
+        run: mv target/release/* public/
 
       - name: Archive Public Directory
         uses: actions/upload-artifact@v2
@@ -60,3 +62,8 @@ jobs:
           name: public
           path: public
 
+    - name: Publish Documentation
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GB_TOKEN }}
+        publish_dir: ./public/doc
