--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           rustup toolchain install stable
           rustup default stable
           cargo build --release
+        # Artifact path: target/release
 
   rustdoc:
     runs-on: ubuntu-latest
@@ -42,9 +43,8 @@ jobs:
           rustup default stable
           cargo doc
 
-
-    - name: Publish Documentation
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GB_TOKEN }}
-        publish_dir: ./target/doc
+      - name: Publish Documentation
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GB_TOKEN }}
+          publish_dir: ./target/doc
