--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Publish Documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./target/doc
