--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,9 @@
-name: Rust Doc
-
 on:
   push:
     branches:
-      - "main"
+      - main
 
-jobs:
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-      - name: Build docs
-        uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --no-deps
-      - name: Checkout gh-pages
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
-          path: gh-pages
-      - name: Push to gh-pages
-        uses: ad-m/github-push-action@v0.5.0
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          branch: gh-pages
-          directory: gh-pages
+name: Publish Docs
+  stage: build
+  script:
+    - echo "hello"
