--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,36 @@
+name: Rust Doc CI
+
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
-name: Publish Docs
-  stage: build
-  script:
-    - echo "hello"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup Rust
+      uses: actions/setup-rust@v2
+      with:
+        rust-version: stable
+
+    - name: Build and Test
+      run: |
+        cargo build --verbose
+        cargo test --verbose
+
+    - name: Generate Documentation
+      run: cargo doc --no-deps
+
+    - name: Deploy Documentation
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GH_TOKEN }}
+        publish_dir: ./target/doc
