--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Rust
-      uses: actions/setup-rust@v2
+      uses: actions/setup-rustup@v1
       with:
-        rust-version: stable
+        profile: minimal
+        toolchain: stable
 
     - name: Build and Test
       run: |
