--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,34 +4,23 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout Repository
       uses: actions/checkout@v2
 
     - name: Install Rust
       run: |
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
         export PATH="$HOME/.cargo/bin:$PATH"
-        rustup default stable
-        rustup update stable
-
-    - name: Build and Test
-      run: |
-        cargo build --verbose
-        cargo test --verbose
-
     - name: Generate Documentation
-      run: cargo doc --no-deps
-
-    - name: Deploy Documentation
+      run: |
+        cargo doc --no-deps
+    - name: Publish Documentation
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GH_TOKEN }}
