--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup Rust
-      uses: actions/setup-rust@v1
-      with:
-        rust-version: stable
+    - name: Install Rust
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        export PATH="$HOME/.cargo/bin:$PATH"
+        rustup default stable
+        rustup update stable
 
     - name: Build documentation
       run: cargo doc --no-deps --all-features
