--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,29 @@
-name: Rust Documentation CI
+name: Rust Doc CI
 
 on:
   push:
     branches:
-      - main  # Change this to your main branch name if different
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
 
     - name: Install Rust
       run: |
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
         export PATH="$HOME/.cargo/bin:$PATH"
-        rustup default stable
-        rustup update stable
 
-    - name: Build documentation
-      run: cargo doc --no-deps --all-features
+    - name: Generate Documentation
+      run: |
+        cargo doc --no-deps
 
-    - name: Publish to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.6
+    - name: Publish Documentation
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages
-        folder: target/doc 
-        token: ${{ secrets.GH_TOKEN }}  
+        github_token: ${{ secrets.GH_TOKEN }}
+        publish_dir: ./target/doc
